tests/invalid/Parsing_Invalid_27.whiley
function f(void[] xs) -> (int r):
     return 1